argocd/defaults/argocd/manifests/network-policy.yaml
# https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-deny-all-ingress-and-all-egress-traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-egress
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
